static/global.css
@import 'reset.css';

* {
	box-sizing: border-box;
}

:root {
	/* System font stacks from https://gist.github.com/don1138/5761014 */
	--font-stack-serif: 'Palatino Linotype', Palatino, Palladio,
		'URW Palladio L', 'Book Antiqua', Baskerville, 'Bookman Old Style',
		'Bitstream Charter', 'Nimbus Roman No9 L', Garamond, 'Apple Garamond',
		'ITC Garamond Narrow', 'New Century Schoolbook', 'Century Schoolbook',
		'Century Schoolbook L', Georgia, serif;
	--font-stack-sans: 'IBM Plex Sans', system-ui, Segoe UI, Helvetica, Roboto,
		sans-serif;
	--font-stack-mono: 'IBM Plex Mono', monospace;

	--clr-yellow-30: #866b00;
	--clr-yellow-50: #d5b712;
	--clr-yellow-60: #ebcc20;
	--clr-yellow-base: var(--clr-yellow-60);

	--clr-red-30: #a22205;
	--clr-red-40: #b7391d;
	--clr-red-60: #fb4444;
	--clr-red-base: var(--clr-red-30);

	--clr-gray-0: #000000;
	--clr-gray-10: #100e06;
	--clr-gray-20: #242021;
	--clr-gray-25: #302b2c;
	--clr-gray-80: #e6e5e4;
	--clr-gray-90: #f2f1f0;
	--clr-gray-95: #fcfcfc;
	--clr-gray-100: #ffffff;

	--clr-lighter-10: hsla(0, 0%, 100%, 0.08);
	--clr-lighter-20: hsla(0, 0%, 100%, 0.2);
	--clr-lighter-30: hsla(0, 0%, 100%, 0.4);
	--clr-lighter-40: hsla(0, 0%, 100%, 0.7);
	--clr-lighter-50: hsla(0, 0%, 100%, 0.95);

	--clr-darker-10: hsla(0, 0%, 0%, 0.05);
	--clr-darker-20: hsla(0, 0%, 0%, 0.17);
	--clr-darker-30: hsla(0, 0%, 0%, 0.35);
	--clr-darker-40: hsla(0, 0%, 0%, 0.65);
	--clr-darker-50: hsla(0, 0%, 0%, 0.93);

	--font-size-0: 0.85em;
	--font-size-10: 1em;
	--font-size-20: 1.2em;
	--font-size-30: calc(4em / 3);
	--font-size-40: calc(5em / 3);
	--font-size-50: calc(6em / 3);

	--reading-width-narrow: 65ch;
	--reading-width-wide: 75ch;
}

.🌞 {
	--text-primary: var(--clr-darker-50);
	--text-secondary: var(--clr-darker-40);
	--text-tertiary: var(--clr-darker-20);
	--text-inverted: var(--clr-lighter-50);
	--theme-primary: var(--clr-red-base);
	--theme-primary-bg: var(--clr-red-30);
	--theme-primary-text: var(--clr-red-30);
	--theme-accent-bg: var(--clr-yellow-50);
	--theme-accent-text: var(--clr-yellow-30);
	--layer-bg: #fbf9f4;
	--layer-container: rgba(255, 255, 255, 0);
	--layer-container-hover: rgba(255, 255, 255, 0.25);
	--layer-highlight: var(--clr-gray-80);
	--clr-scrollbar: var(--clr-darker-20);
	--divider: var(--clr-darker-20);
	--container-border: 0.5px solid var(--clr-darker-30);
}

.🌒 {
	--text-primary: var(--clr-lighter-50);
	--text-secondary: var(--clr-lighter-40);
	--text-tertiary: var(--clr-lighter-20);
	--text-inverted: var(--clr-darker-50);
	--theme-primary: var(--clr-yellow-base);
	--theme-primary-bg: var(--clr-yellow-60);
	--theme-primary-text: var(--clr-yellow-60);
	--theme-accent-bg: var(--clr-red-40);
	--theme-accent-text: var(--clr-red-60);
	--layer-bg: var(--clr-gray-10);
	--layer-container: var(--clr-gray-20);
	--layer-container-hover: var(--clr-gray-25);
	--layer-highlight: var(--clr-gray-20);
	--clr-scrollbar: var(--clr-lighter-20);
	--divider: var(--clr-lighter-40);
	--container-border: 0.5px solid var(--clr-lighter-20);
}

.🌞,
.🌒 {
	--text-link: var(--theme-primary);
	--text-link-hover: var(--theme-accent-text);
}

/*    TYPOGRAPHY    */

html {
	font-family: var(--font-stack-sans);
	font-weight: 400;
	font-size: 16px;
	/* Used as basis for spacing throughout the app. */
	line-height: calc(1.5 / 0.875); /* 24px for base font size */
}

html,
body {
	background-color: #fbf9f4;
}

.app {
	font-size: 0.875rem;
	/* 14px on most monitors. */
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child,
p:first-child {
	margin-top: 0;
}

h1,
h2 {
	font-weight: 300;
}

h1 {
	font-size: var(--font-size-50);
	line-height: 1.4;
}

h2 {
	font-size: var(--font-size-30);
	line-height: 1.4;
}

blockquote {
	margin: 0;
	padding-left: 1rem;
	border-left: 4px solid var(--divider);
	font-style: italic;
	font-size: 1.2em;
	font-family: var(--font-stack-serif);
}

blockquote > * + *,
article > * + *,
* + figcaption {
	margin-top: 1em;
}

hr {
	color: var(--divider);
	margin: 1rem 0;
}

ul {
	list-style-type: circle;
}

table {
	border-collapse: collapse;
}

tr:not(:first-child) {
	border-top: 1px solid var(--divider);
}

th,
td {
	padding: 0.5rem 0.25rem;
}

th {
	text-align: left;
	font-weight: normal;
	color: var(--text-secondary);
	vertical-align: bottom;
	white-space: nowrap;
	padding-top: 0;
}

td {
	vertical-align: baseline;
}

strong {
	font-weight: 500;
}

a {
	color: var(--text-link);
	text-decoration: none;
	transition: color 0.33s;
}

a:hover {
	color: var(--text-link-hover);
	cursor: pointer;
	text-decoration: underline;
}

a,
.text-mono,
pre,
code,
kbd,
samp {
	font-family: var(--font-stack-mono);
	font-size: 0.925em;
	/* The monospace fonts tend to be optically larger for a given font size. */
	line-height: calc((1.5 / 0.875) / 0.925);
}

.text-mono a {
	font-size: 1em;
	/* Avoid compounding ensmallnesses. */
}

.markdown-block > *:first-child {
	margin-top: 0;
}

.markdown-block > *:last-child {
	margin-bottom: 0;
}

/*    HELPERS    */

.inherit {
	all: inherit;
}

.text-inverted {
	color: var(--text-inverted) !important;
}

.text-secondary {
	color: var(--text-secondary);
}

.text-right {
	text-align: right;
}

.themey {
	background-color: var(--theme-primary-bg);
	color: var(--text-inverted);

	--layer-highlight: var(--theme-primary-bg);
	--text-link: var(--text-inverted);
	--text-link-hover: var(--text-inverted);
}

